@@ -1,3 +1,12 @@
+2006-03-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* gnu/java/net/protocol/http/Headers.java:
+	Match layout of file on HEAD.
+	* gnu/javax/swing/text/html/parser/htmlValidator.java:
+	Likewise.
+	* java/awt/datatransfer/DataFlavor.java
+	Likewise.
+
 2006-03-26  Audrius Meskauskas  <AudriusA@Bioinformatics.org>
 
 	* gnu/java/rmi/activation/DefaultActivationGroup.java: 
